Extract Groovy/Kotlin DSL specifics in dedicated types
Signed-off-by: Paul Merlin <paul@gradle.com>